- Merged very large OpenBSD source code reformat  - OpenBSD CVS updates    - [channels.c cipher.c compat.c log-client.c scp.c serverloop.c]      [ssh.h sshd.8 sshd.c]      syslog changes:      * Unified Logmessage for all auth-types, for success and for failed      * Standard connections get only ONE line in the LOG when level==LOG:        Auth-attempts are logged only, if authentication is:           a) successfull or           b) with passwd or           c) we had more than AUTH_FAIL_LOG failues      * many log() became verbose()      * old behaviour with level=VERBOSE    - [readconf.c readconf.h ssh.1 ssh.h sshconnect.c sshd.c]      tranfer s/key challenge/response data in SSH_SMSG_AUTH_TIS_CHALLENGE      messages. allows use of s/key in windows (ttssh, securecrt) and      ssh-1.2.27 clients without 'ssh -v', ok: niels@    - [sshd.8]      -V, for fallback to openssh in SSH2 compatibility mode    - [sshd.c]      fix sigchld race; cjc5@po.cwru.edu

--- a/configure.in
+++ b/configure.in
@@ -55,7 +55,7 @@ AC_CHECK_LIB(dl, dlopen, , )
 AC_CHECK_LIB(pam, pam_authenticate, , )
 
 dnl Checks for header files.
-AC_CHECK_HEADERS(pty.h endian.h paths.h lastlog.h shadow.h netgroup.h maillock.h utmp.h sys/select.h sys/time.h)
+AC_CHECK_HEADERS(pty.h endian.h paths.h lastlog.h shadow.h netgroup.h maillock.h utmp.h util.h sys/select.h sys/time.h)
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(openpty strlcpy strlcat mkdtemp arc4random setproctitle setlogin setenv)
