--- a/Makefile.in
+++ b/Makefile.in
@@ -83,14 +83,10 @@ install: all
 	ln -sf ssh $(bindir)/slogin
 	ln -sf ssh.1 $(mandir)/man1/slogin.1
 
-	if [ "x@INSTALL_ASKPASS@" = "xyes" ] ; then \
-		$(INSTALL) -d $(libexecdir) ; \
-		$(INSTALL) -d $(libexecdir)/ssh ; \
-		if [ -z "@GNOME_ASKPASS@" ] ; then \
-			$(INSTALL) -m755 -c ssh-askpass ${ASKPASS_PROGRAM}; \
-		else \
-			$(INSTALL) -m755 -c gnome-ssh-askpass ${ASKPASS_PROGRAM}; \
-		fi ; \
+	$(INSTALL) -d $(libexecdir) ;
+	$(INSTALL) -d $(libexecdir)/ssh ;
+	if [ -z "@GNOME_ASKPASS@" ] ; then \
+		$(INSTALL) -m755 -c ssh-askpass ${ASKPASS_PROGRAM}; \
 	fi
 
 	if [ ! -f $(sysconfdir)/ssh_config -a ! -f $(sysconfdir)/sshd_config ]; then \
