- Merged more OpenBSD changes:    - [atomicio.c authfd.c scp.c serverloop.c ssh.h sshconnect.c sshd.c]      move atomicio into it's own file.  wrap all socket write()s which      were doing write(sock, buf, len) != len, with atomicio() calls.    - [auth-skey.c]      fd leak    - [authfile.c]      properly name fd variable    - [channels.c]      display great hatred towards strcpy    - [pty.c pty.h sshd.c]      use openpty() if it exists (it does on BSD4_4)    - [tildexpand.c]      check for ~ expansion past MAXPATHLEN  - Modified helper.c to use new atomicio function.  - Reformat Makefile a little  - Moved RC4 routines from rc4.[ch] into helper.c  - Added autoconf code to detect /dev/ptmx (Solaris) and /dev/ptc (AIX)

--- a/configure.in
+++ b/configure.in
@@ -59,7 +59,7 @@ dnl Checks for header files.
 AC_CHECK_HEADERS(endian.h lastlog.h login.h maillock.h netgroup.h paths.h pty.h shadow.h util.h utmp.h sys/select.h sys/time.h)
 
 dnl Checks for library functions.
-AC_CHECK_FUNCS(arc4random mkdtemp openpty setenv setlogin setproctitle snprintf strlcat strlcpy vsnprintf)
+AC_CHECK_FUNCS(arc4random mkdtemp openpty _getpty setenv setlogin setproctitle snprintf strlcat strlcpy vsnprintf)
 
 AC_CHECK_FUNC(login, 
 	[AC_DEFINE(HAVE_LOGIN)],
@@ -220,6 +220,9 @@ else
 	AC_MSG_RESULT($lastlog)
 	AC_DEFINE_UNQUOTED(LASTLOG_LOCATION, "$lastlog")
 fi	
+
+AC_CHECK_FILE("/dev/ptmx", AC_DEFINE_UNQUOTED(HAVE_DEV_PTMX))
+AC_CHECK_FILE("/dev/ptc", AC_DEFINE_UNQUOTED(HAVE_DEV_PTS_AND_PTC))
 
 AC_MSG_CHECKING([whether libc defines __progname])
 AC_TRY_LINK([], 
