--- a/Makefile.in
+++ b/Makefile.in
@@ -23,25 +23,31 @@ LFLAGS=@LDFLAGS@
 GNOME_CFLAGS=`gnome-config --cflags gnome gnomeui`
 GNOME_LIBS=`gnome-config --libs gnome gnomeui`
 
-OBJS=	authfd.o authfile.o auth-passwd.o auth-rhosts.o auth-rh-rsa.o \
-		auth-rsa.o auth-skey.o bufaux.o buffer.o canohost.o channels.o \
-		cipher.o clientloop.o compress.o crc32.o deattack.o helper.o \
-		hostfile.o log-client.o login.o log-server.o match.o mpaux.o \
-		packet.o pty.o readconf.o readpass.o rsa.o servconf.o serverloop.o \
-		sshconnect.o tildexpand.o ttymodes.o uidswap.o xmalloc.o \
-		helper.o bsd-mktemp.o bsd-strlcpy.o bsd-strlcat.o bsd-daemon.o \
-		bsd-login.o bsd-snprintf.o rc4.o md5crypt.o
-
+OBJS= atomicio.o authfd.o authfile.o auth-passwd.o auth-rhosts.o \
+  auth-rh-rsa.o auth-rsa.o auth-skey.o bsd-daemon.o bsd-login.o \
+  bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o bufaux.o \
+  buffer.o canohost.o channels.o cipher.o clientloop.o compress.o \
+  crc32.o deattack.o helper.o helper.o hostfile.o log-client.o \
+  login.o log-server.o match.o md5crypt.o mpaux.o packet.o pty.o \
+  readconf.o readpass.o rsa.o servconf.o serverloop.o \
+  sshconnect.o tildexpand.o ttymodes.o uidswap.o xmalloc.o 
 all: $(OBJS) $(TARGETS)
 
-libssh.a: authfd.o authfile.o bufaux.o buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o deattack.o hostfile.o match.o mpaux.o nchan.o packet.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o helper.o rc4.o bsd-mktemp.o bsd-strlcpy.o bsd-strlcat.o bsd-snprintf.o bsd-daemon.o log.o fingerprint.o
+libssh.a: atomicio.o authfd.o authfile.o bsd-daemon.o bsd-mktemp.o \
+  bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o bufaux.o \
+  buffer.o canohost.o channels.o cipher.o compat.o \
+  compress.o crc32.o deattack.o fingerprint.o helper.o \
+  hostfile.o log.o match.o mpaux.o nchan.o packet.o \
+  readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o 
 	$(AR) rv $@ $^
 	$(RANLIB) $@
 
 ssh: ssh.o sshconnect.o log-client.o readconf.o clientloop.o libssh.a
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-sshd:	sshd.o auth-rhosts.o auth-passwd.o auth-rsa.o auth-rh-rsa.o pty.o log-server.o login.o servconf.o serverloop.o bsd-login.o md5crypt.o libssh.a
+sshd:	sshd.o auth-rhosts.o auth-passwd.o auth-rsa.o auth-rh-rsa.o \
+  pty.o log-server.o login.o servconf.o serverloop.o bsd-login.o \
+  md5crypt.o libssh.a
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
 scp:	scp.o libssh.a
