- Fix compilation on systems with AFS. Reported by    aloomis@glue.umd.edu  - Fix installation on Solaris. Reported by    Gordon Rowell <gordonr@gormand.com.au>  - Fix gccisms (__attribute__ and inline). Report by edgy@us.ibm.com,    patch from Markus Friedl <markus.friedl@informatik.uni-erlangen.de>  - Auto-locate xauth. Patch from David Agraz <dagraz@jahoopa.com>  - Compile fix from David Agraz <dagraz@jahoopa.com>  - Avoid compiler warning in bsd-snprintf.c  - Added pam_limits.so to default PAM config. Suggested by    Jim Knoble <jmknoble@pobox.com>

--- a/configure.in
+++ b/configure.in
@@ -287,4 +287,8 @@ AC_ARG_WITH(md5-passwords,
 	[AC_DEFINE(HAVE_MD5_PASSWORDS)]
 )
 
+dnl Check for the path to xauth
+AC_PATH_PROG(xauth_path, xauth)
+AC_DEFINE_UNQUOTED(XAUTH_PATH, "$xauth_path")
+
 AC_OUTPUT(Makefile)
