--- a/Makefile.in
+++ b/Makefile.in
@@ -24,14 +24,15 @@ LFLAGS=@LDFLAGS@
 GNOME_CFLAGS=`gnome-config --cflags gnome gnomeui`
 GNOME_LIBS=`gnome-config --libs gnome gnomeui`
 
-OBJS= atomicio.o authfd.o authfile.o auth-passwd.o auth-rhosts.o \
-  auth-rh-rsa.o auth-rsa.o auth-skey.o bsd-daemon.o bsd-login.o \
-  bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o bufaux.o \
-  buffer.o canohost.o channels.o cipher.o clientloop.o compress.o \
-  crc32.o deattack.o helper.o helper.o hostfile.o log-client.o \
-  login.o log-server.o match.o md5crypt.o mpaux.o packet.o pty.o \
-  readconf.o readpass.o rsa.o servconf.o serverloop.o \
-  sshconnect.o tildexpand.o ttymodes.o uidswap.o xmalloc.o 
+OBJS= atomicio.o authfd.o authfile.o auth-krb4.o auth-passwd.o \
+  auth-rhosts.o auth-rh-rsa.o auth-rsa.o auth-skey.o bsd-daemon.o \
+  bsd-login.o bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o 
+  bufaux.o buffer.o canohost.o channels.o cipher.o clientloop.o \
+  compress.o crc32.o deattack.o helper.o helper.o hostfile.o \
+  log-client.o login.o log-server.o match.o md5crypt.o mpaux.o \
+  packet.o pty.o radix.o readconf.o readpass.o rsa.o servconf.o \
+  serverloop.o sshconnect.o tildexpand.o ttymodes.o uidswap.o \
+  xmalloc.o 
 all: $(OBJS) $(TARGETS)
 
 libssh.a: atomicio.o authfd.o authfile.o bsd-daemon.o bsd-mktemp.o \
@@ -39,16 +40,17 @@ libssh.a: atomicio.o authfd.o authfile.o bsd-daemon.o bsd-mktemp.o \
   buffer.o canohost.o channels.o cipher.o compat.o \
   compress.o crc32.o deattack.o fingerprint.o helper.o \
   hostfile.o log.o match.o mpaux.o nchan.o packet.o \
-  readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o xmalloc.o 
+  radix.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o \
+  xmalloc.o 
 	$(AR) rv $@ $^
 	$(RANLIB) $@
 
 ssh: ssh.o sshconnect.o log-client.o readconf.o clientloop.o libssh.a
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) 
 
-sshd:	sshd.o auth-rhosts.o auth-passwd.o auth-rsa.o auth-rh-rsa.o \
-  pty.o log-server.o login.o servconf.o serverloop.o bsd-login.o \
-  md5crypt.o libssh.a
+sshd:	sshd.o auth-rhosts.o auth-krb4.o auth-passwd.o auth-rsa.o \
+  auth-rh-rsa.o pty.o log-server.o login.o servconf.o serverloop.o \
+  bsd-login.o md5crypt.o libssh.a
 	$(CC) -o $@ $^ $(LFLAGS) $(LIBS) $(LIBWRAP)
 
 scp:	scp.o libssh.a
@@ -81,27 +83,27 @@ install: all
 	$(INSTALL) -s ssh-agent $(bindir)/ssh-agent
 	$(INSTALL) -s ssh-keygen $(bindir)/ssh-keygen
 	$(INSTALL) -s sshd $(sbindir)/sshd
-	$(INSTALL) -m644 ssh.1 $(mandir)/man1/ssh.1
-	$(INSTALL) -m644 scp.1 $(mandir)/man1/scp.1
-	$(INSTALL) -m644 ssh-add.1 $(mandir)/man1/ssh-add.1
-	$(INSTALL) -m644 ssh-agent.1 $(mandir)/man1/ssh-agent.1
-	$(INSTALL) -m644 ssh-keygen.1 $(mandir)/man1/ssh-keygen.1
-	$(INSTALL) -m644 sshd.8 $(mandir)/man8/sshd.8
+	$(INSTALL) -m 644 ssh.1 $(mandir)/man1/ssh.1
+	$(INSTALL) -m 644 scp.1 $(mandir)/man1/scp.1
+	$(INSTALL) -m 644 ssh-add.1 $(mandir)/man1/ssh-add.1
+	$(INSTALL) -m 644 ssh-agent.1 $(mandir)/man1/ssh-agent.1
+	$(INSTALL) -m 644 ssh-keygen.1 $(mandir)/man1/ssh-keygen.1
+	$(INSTALL) -m 644 sshd.8 $(mandir)/man8/sshd.8
 	-rm -f $(bindir)/slogin
 	ln -s ssh $(bindir)/slogin
 	-rm -f $(mandir)/man1/slogin.1
 	ln -s ssh.1 $(mandir)/man1/slogin.1
 
-	$(INSTALL) -d $(libexecdir) ;
-	$(INSTALL) -d $(libexecdir)/ssh ;
 	if [ ! -z "@GNOME_ASKPASS@" ] ; then \
+		$(INSTALL) -d $(libexecdir) ;
+		$(INSTALL) -d $(libexecdir)/ssh ;
 		$(INSTALL) -s @GNOME_ASKPASS@ ${ASKPASS_PROGRAM} ; \
 	fi
 
 	if [ ! -f $(sysconfdir)/ssh_config -a ! -f $(sysconfdir)/sshd_config ]; then \
 		$(INSTALL) -d $(sysconfdir); \
-		$(INSTALL) -m644 ssh_config $(sysconfdir)/ssh_config; \
-		$(INSTALL) -m644 sshd_config $(sysconfdir)/sshd_config; \
+		$(INSTALL) -m 644 ssh_config $(sysconfdir)/ssh_config; \
+		$(INSTALL) -m 644 sshd_config $(sysconfdir)/sshd_config; \
 	fi
 
 uninstallall:	uninstall
@@ -129,7 +131,6 @@ uninstall:
 	-rm -f $(mandir)/man1/ssh-keygen.1
 	-rm -f $(mandir)/man8/sshd.8
 	-rm -f $(bindir)/slogin
-	-rm -f $(mandir)/man1/slogin.1
 	-rm -f $(mandir)/man1/slogin.1
 	-rm -f ${ASKPASS_PROGRAM}
 	-rmdir $(libexecdir)/ssh ;
