--- a/configure.in
+++ b/configure.in
@@ -53,6 +53,9 @@ case "$host" in
 		AC_DEFINE(DISABLE_SHADOW)
 	fi
 	;;
+*-*-solaris*)
+	AC_DEFINE(USE_UTMPX)
+	;;
 esac
 
 dnl Check for OpenSSL/SSLeay directories.
@@ -101,11 +104,14 @@ AC_ARG_WITH(pam,
 	[  --without-pam           Disable PAM support ],
 	[
 		if test "x$withval" != "xno" ; then
-			AC_CHECK_LIB(dl, dlopen, , )
-			AC_CHECK_LIB(pam, pam_authenticate, , )
+			no_pam=1
 		fi
 	]
 )
+if test -z "$no_pam" ; then
+	AC_CHECK_LIB(dl, dlopen, , )
+	AC_CHECK_LIB(pam, pam_authenticate, , )
+fi
 
 dnl Checks for header files.
 AC_CHECK_HEADERS(endian.h lastlog.h login.h maillock.h netgroup.h paths.h poll.h pty.h shadow.h util.h utmp.h utmpx.h sys/bsdtty.h sys/poll.h sys/select.h sys/stropts.h sys/time.h sys/ttcompat.h)
