--- a/sshd_config.in
+++ b/sshd_config.in
@@ -2,7 +2,7 @@
 
 Port 22
 ListenAddress 0.0.0.0
-HostKey /etc/ssh/ssh_host_key
+HostKey @sysconfdir@/ssh_host_key
 ServerKeyBits 768
 LoginGraceTime 600
 KeyRegenerationInterval 3600
