- Merged AIX patch from Darren Hall <dhall@virage.org>  - Cleaned up defines.h

--- a/configure.in
+++ b/configure.in
@@ -177,6 +177,18 @@ AC_TRY_COMPILE(
 	[AC_MSG_RESULT(no)]
 ) 
 
+AC_MSG_CHECKING([For socklen_t])
+AC_TRY_COMPILE(
+	[#include <sys/types.h>],
+	[#include <sys/socket.h>],
+	[socklen_t foo; foo = 1235;],
+	[
+		AC_DEFINE(HAVE_SOCKLEN_T)
+		AC_MSG_RESULT(yes)
+	],
+	[AC_MSG_RESULT(no)]
+)
+
 AC_ARG_WITH(pam,
 	[  --without-pam           Disable PAM support ],
 	[
