--- a/configure.in
+++ b/configure.in
@@ -9,6 +9,8 @@ AC_PROG_CPP
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_CHECK_PROG(AR, ar, ar)
+AC_PATH_PROG(PERL, perl)
+AC_SUBST(PERL)
 AC_PATH_PROG(xauth_path, xauth)
 
 dnl Use ip address instead of hostname in $DISPLAY
