- Rename helper.[ch] to (more appropriate) bsd-misc.[ch]  - Minor Makefile cleaning

--- a/Makefile.in
+++ b/Makefile.in
@@ -33,20 +33,19 @@ GNOME_LIBS=`gnome-config --libs gnome gnomeui`
 
 OBJS= atomicio.o authfd.o authfile.o auth-krb4.o auth-passwd.o \
   auth-rhosts.o auth-rh-rsa.o auth-rsa.o auth-skey.o bsd-daemon.o \
-  bsd-login.o bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o \
-  bufaux.o buffer.o canohost.o channels.o cipher.o clientloop.o \
-  compress.o crc32.o deattack.o helper.o helper.o hostfile.o \
+  bsd-login.o bsd-misc.o bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o \
+  bsd-strlcpy.o bufaux.o buffer.o canohost.o channels.o cipher.o \
+  clientloop.o compress.o crc32.o deattack.o hostfile.o \
   log-client.o login.o log-server.o match.o md5crypt.o mpaux.o \
   packet.o pty.o radix.o readconf.o readpass.o rsa.o servconf.o \
   serverloop.o sshconnect.o tildexpand.o ttymodes.o uidswap.o \
   xmalloc.o 
 
-LIBOBJS= atomicio.o authfd.o authfile.o bsd-daemon.o bsd-mktemp.o \
-  bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o bufaux.o \
-  buffer.o canohost.o channels.o cipher.o compat.o \
-  compress.o crc32.o deattack.o fingerprint.o helper.o \
-  hostfile.o log.o match.o mpaux.o nchan.o packet.o \
-  radix.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o \
+LIBOBJS= atomicio.o authfd.o authfile.o bsd-daemon.o bsd-misc.o \
+  bsd-mktemp.o bsd-snprintf.o bsd-strlcat.o bsd-strlcpy.o bufaux.o \
+  buffer.o canohost.o channels.o cipher.o compat.o compress.o crc32.o \
+  deattack.o fingerprint.o hostfile.o log.o match.o mpaux.o nchan.o \
+  packet.o radix.o readpass.o rsa.o tildexpand.o ttymodes.o uidswap.o \
   xmalloc.o 
 
 all: $(OBJS) $(TARGETS) manpages
@@ -90,8 +89,7 @@ clean:
 		*.1 *.8 sshd_config ssh_config
 
 manpages:
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} $(srcdir)/*.1.in $(srcdir)/*.8.in \
-		$(srcdir)/ssh_config.in $(srcdir)/sshd_config.in
+	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} $(srcdir)/*.[18].in $(srcdir)/ssh*_config.in
 
 install: all
 	$(INSTALL) -d $(bindir)
